--- a/pom.xml
+++ b/pom.xml
@@ -2,22 +2,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-<groupId>ua.kiev.prog</groupId>
-<artifactId>ProgKiev01062021</artifactId>
-<version>0.0.1</version>
+    <groupId>ua.kiev.prog</groupId>
+    <artifactId>ProgKiev01062021</artifactId>
+    <version>0.0.1</version>
 
-<properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <!-- Dependencies version -->
+        <testng.version>7.3.0</testng.version>
+        <selenide.version>5.19.0</selenide.version>
 
-    <!-- Plugins version -->
-    <plugin.maven.compiler.version>3.8.0</plugin.maven.compiler.version>
-</properties>
+        <!-- Plugins version -->
+        <plugin.maven.compiler.version>3.8.0</plugin.maven.compiler.version>
+    </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.codeborne/selenide -->
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>${selenide.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
