--- a/src/main/resources/env/dev.properties
+++ b/src/main/resources/env/dev.properties
@@ -3,3 +3,9 @@ site.username=yurii.voronenko@gmail.com
 site.password=12345678
 
 browser.name=chrome
+
+mysql.host=91.194.250.154
+mysql.port=3306
+mysql.database=gsrvyi_ocart
+mysql.username=gsrvyi_ocart
+mysql.password=QrVR1543782Y
