Added allure report

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <allure.results.directory>allure-results</allure.results.directory>
+
         <!-- Dependencies version -->
         <testng.version>7.3.0</testng.version>
         <selenide.version>5.19.0</selenide.version>
@@ -23,13 +25,15 @@
         <mysql-connector-java.version>8.0.25</mysql-connector-java.version>
         <lombok.version>1.18.20</lombok.version>
         <commons-text.version>1.9</commons-text.version>
-
-
+        <allure.version>2.14.0</allure.version>
 
         <!-- Plugins version -->
         <plugin.maven.compiler.version>3.8.0</plugin.maven.compiler.version>
-    </properties>
+        <plugin.maven.surefire.version>2.22.2</plugin.maven.surefire.version>
+        <aspectj.version>1.9.7</aspectj.version>
+        <allure.plugin.version>2.10.0</allure.plugin.version>
 
+    </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
@@ -98,6 +102,18 @@
             <artifactId>commons-text</artifactId>
             <version>${commons-text.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>${allure.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-selenide -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-selenide</artifactId>
+            <version>${allure.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -111,6 +127,48 @@
                     <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
+            <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-maven -->
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>${allure.plugin.version}</version>
+                <configuration>
+                    <properties>
+                        <allure.results.directory>${allure.results.directory}</allure.results.directory>
+                    </properties>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${plugin.maven.surefire.version}</version>
+                <configuration>
+                    <!--<suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>-->
+                    <!--<forkCount>3</forkCount>-->
+                    <testFailureIgnore>false</testFailureIgnore>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}\org\aspectj\aspectjweaver\${aspectj.version}\aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
+                    <systemProperties>
+                        <allure.results.directory>target/${allure.results.directory}</allure.results.directory>
+                    </systemProperties>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2/</url>
+        </repository>
+    </repositories>
 </project>
