--- a/src/main/resources/env/dev.properties
+++ b/src/main/resources/env/dev.properties
@@ -3,6 +3,8 @@ site.username=yurii.voronenko@gmail.com
 site.password=12345678
 
 browser.name=chrome
+grid.host = localhost
+grid.port = 4444
 
 mysql.host=91.194.250.154
 mysql.port=3306
